--- a/package.json
+++ b/package.json
@@ -10,13 +10,16 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@animxyz/core": "^0.6.6",
+    "@animxyz/react": "^0.6.7",
+    "@prisma/client": "^5.1.1",
+    "@types/express": "^4.17.17",
+    "express": "^4.18.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.14.0"
   },
   "devDependencies": {
-    "@animxyz/core": "^0.6.6",
-    "@animxyz/react": "^0.6.7",
     "@types/react": "^18.0.37",
     "@types/react-dom": "^18.0.11",
     "@typescript-eslint/eslint-plugin": "^5.59.0",
@@ -27,7 +30,9 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.3.4",
     "postcss": "^8.4.24",
+    "prisma": "^5.1.1",
     "tailwindcss": "^3.3.2",
+    "tsx": "^3.12.7",
     "typescript": "^5.0.2",
     "vite": "^4.3.9"
   }
