--- a/package.json
+++ b/package.json
@@ -12,14 +12,25 @@
   "dependencies": {
     "@animxyz/core": "^0.6.6",
     "@animxyz/react": "^0.6.7",
+    "@hookform/resolvers": "^3.2.0",
     "@prisma/client": "^5.1.1",
+    "@tanstack/react-query": "^4.32.6",
+    "@tanstack/react-query-devtools": "^4.32.6",
     "@types/express": "^4.17.17",
+    "axios": "^1.4.0",
+    "cors": "^2.8.5",
     "express": "^4.18.2",
+    "multer": "^1.4.5-lts.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.14.0"
+    "react-hook-form": "^7.45.4",
+    "react-router-dom": "^6.14.0",
+    "zod": "^3.21.4"
   },
   "devDependencies": {
+    "@tanstack/eslint-plugin-query": "^4.32.5",
+    "@types/cors": "^2.8.13",
+    "@types/multer": "^1.4.7",
     "@types/react": "^18.0.37",
     "@types/react-dom": "^18.0.11",
     "@typescript-eslint/eslint-plugin": "^5.59.0",
