--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-hook-form": "^7.45.4",
     "react-router-dom": "^6.14.0",
     "react-toastify": "^9.1.3",
+    "use-local-storage-state": "^19.0.4",
     "zod": "^3.21.4"
   },
   "devDependencies": {
