--- a/package.json
+++ b/package.json
@@ -26,10 +26,11 @@
     "react-hook-form": "^7.45.4",
     "react-router-dom": "^6.14.0",
     "react-toastify": "^9.1.3",
-    "use-local-storage-state": "^19.0.4",
     "zod": "^3.21.4"
   },
   "devDependencies": {
+    "@headlessui/react": "^1.7.17",
+    "@heroicons/react": "^2.0.18",
     "@tanstack/eslint-plugin-query": "^4.32.5",
     "@types/cors": "^2.8.13",
     "@types/multer": "^1.4.7",
